--- a/amplify.yaml
+++ b/amplify.yaml
@@ -1,12 +1,17 @@
 version: 0.1
 frontend:
   phases:
-    # IMPORTANT - Please verify your build commands
     build:
-      commands: []
+      commands:
+        - rm -rf /usr/bin/hugo
+        - mkdir hugo
+        - wget https://github.com/gohugoio/hugo/releases/download/v${VERSION_HUGO_NEW}/hugo_${VERSION_HUGO_NEW}_Linux-64bit.tar.gz
+        - tar -xvf hugo_${VERSION_HUGO_NEW}_Linux-64bit.tar.gz -C ./hugo
+        - mv ./hugo /usr/bin/hugo
+        - rm -rf hugo_${VERSION_HUGO_NEW}_Linux-64bit.tar.gz
+        - /usr/bin/hugo/hugo
   artifacts:
-    # IMPORTANT - Please verify your build output directory
-    baseDirectory: /
+    baseDirectory: public
     files:
       - '**/*'
   cache:
